--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "dev": "nodemon --exec ts-node server.ts"
   },
   "devDependencies": {
+    "@types/mime-types": "^2.1.4",
     "nodemon": "^3.0.1"
   }
 }
