--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.4",
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.1"
   }
 }
