--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/radar": "^0.84.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
