--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
