--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,9 @@
   },
   "scripts": {
     "start": "ts-node server.ts",
-    "dev": "nodemon --exec ts-node server.ts"
+    "dev": "nodemon --exec ts-node server.ts",
+    "build": "tsc -p tsconfig.json",
+    "db:migrate": "prisma migrate dev --name init"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.4",
