--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,9 @@
     "start": "ts-node server.ts",
     "dev": "nodemon --exec ts-node server.ts",
     "build": "tsc -p tsconfig.json",
-    "db:migrate": "prisma migrate dev --name init"
+    "db:migrate": "prisma migrate dev --name init",
+    "docker:up": "docker-compose up -d --build",
+    "deploy": "git pull && yarn && yarn db:migrate && pm2 restart server && pm2 monit"
   },
   "devDependencies": {
     "@types/mime-types": "^2.1.4",
